    used when aging conx)
* Fixed keyerror in conductorelements where I forgot to check if a key was in a dict first

5/30/2014
* Fixed a problem where the age never went down (because the expiration routine was
    updating the timestamp)
* (Visual) Added response to all conductor messages
* Fixed prob where conductor used timestamp rather than createtime to report age
* Refactoring: Moved all classes to their own modules

6/1/2014
* Implemented many cell attrs
* Refined conx attr algorithms and params

6/2/2014
* Added routine to scrape cells and determine which ones are abandoned
* Resolved problem of ghost cells connectors (added routine to see if 
    a cell hadn't gotten an update in a while and was abandoned)
* Resolved problem of ghost connectors (this was actually intention in
    case a cell came back to life, but really just caused probs)
* Verified and tested conx attr: grouped
* Verified and tested conx attr: contact
* Verified and tested conx attr: friends
* Changes params for many (most?) def in field so they were passing 
    uids instead of cell refs
* Added checks to see if cell and conx attrs existed before issuing
    stops for them
* Verified and tested conx attr: fusion
* Implemented cell attr interactive
* Implemented cell attr static
* Implemented cell attr kinetic
* Implemented cell attr fast
* Implemented cell attr timein
* Worked out some bugs in the conductor update_all_cells routine

6/3/2014
* Created a script that would scrape my conductor sources and summarize the
    status of all the attributes: implemented, tested, etc, including params
* Fixed facing with a 180 degree FIXME
* Adjusted the params on many attributes
* Created a del_cell_attr routine which was mysterious absent
* Verified and tested cell attr: static
* Verified and tested cell attr: kinetic
* Verified and tested cell attr: fast
* Verified and tested conx attr: irlbuds
* Verified and tested conx attr: facing
