@@ -2,6 +2,8 @@
 # -*- coding: utf-8 -*-
 """Co-related space shared config file """
 
+from shared.config_ext import *
+
 # system configuration
 framerate = 25.0
 
@@ -24,8 +26,8 @@ cell_avg_triggers = {
     # cell values
     'dance': 0.8,
     'interactive': 0.25,    # implemented
-    'static': 0.6,  # implemented
-    'kinetic': 0.6, # implemented
+    'static': 0.8,  # implemented
+    'kinetic': 0.8, # implemented
     'fast': 0.8,    # implemented; tested
     'timein': 0.5,  # implemented
     'spin': 0.8,
@@ -42,9 +44,10 @@ cell_memory_time = {
     'dance': 10,
     'interactive': 5*60,
     'static': 20,
-    'kinetic': 10,
+    'kinetic': 20,
     'fast': 2,
-    'timein': 120,
+    'timein': 20,
+    #'timein': 120,
     'spin': 10,
     'quantum': 10,
     'jacks': 10,
@@ -242,57 +245,6 @@ report_frequency = {
     'gattrs': 5,
     'events': 1,
 }
-
-# Debugging codes get and'ed together
-# MORE  = 1
-# FIELD = 2
-# DATA  = 4
-# GRAPH = 8
-# MSGS  = 16
-# PYG   = 32
-# COND  = 32
-debug_level = 2 + 4 + 64    # data (2), field (4), osc(16), conduct(64)
-#debug_level = 2 + 4    # data (2), field (4)
-#debug_level = 2 + 4 + 8    # data (2), field (4), graph (8)
-#debug_level = 255    # everything
-
-max_lost_patience = 2   # (sec)
-
-# OSC configuration
-
-osc_default_host = "UNSPECIFIED"
-osc_default_port = -1
-
-osc_visual_host = "192.168.0.100"
-osc_visual_port = 7012
-
-osc_conductor_host = "192.168.0.100"
-osc_conductor_port = 7011
-
-osc_tracking_host = "192.168.0.162"
-osc_tracking_port = 7770
-
-osc_sound_host = "192.168.0.101"
-osc_sound_port = 7010
-
-osc_laser_host = "192.168.0.162"
-osc_laser_port = 7780
-
-osc_recorder_host = "192.168.0.162"
-osc_recorder_port = 7790
-
-osc_local_only=True
-
-if osc_local_only:
-    #localhost="127.0.0.1"
-    localhost="localhost"
-    osc_visual_host = localhost
-    osc_conductor_host = localhost
-    osc_tracking_host = localhost
-    osc_sound_host = localhost
-    osc_laser_host =localhost
-    osc_recorder_host =localhost
-
 osctimeout = 0
 
 oscpath = {
